# Phaser

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CURRENT.md  EXECUTION_REPORT.md  LICENSE  README.md  global-claude-snippet.md  pyproject.toml  requirements.txt
audit-phases/: README.md  phase-36.md  phase-37.md  phase-38.md  phase-39.md  phase-40.md  phase-41.md  phase-42.md  phase-43.md  phase-44.md  phase-45.md  phase-46.md  phase-47.md  setup.md
docs/: ROADMAP.md  creating-audits.md  document-8-phase-negotiation-refined.md  post-audit-validation.md  quick-reference.md
examples/: impromptu-setup-block.md
specs/: architecture.md  branches.md  bridge.md  ci.md  cli.md  contracts.md  diff.md  events.md  ignore_parser.md  insights.md  negotiate.md  replay.md  reverse.md  simulation.md  storage.md  tool_input.md  validate.md
templates/: CONTEXT.refined.md  CONTEXT.template.md  CURRENT.template.md  hooks.json  phase.refined.md  phase.template.md  refined-quickref.md  setup-block.template.md  validation-prompt.template.md
tests/: __init__.py  conftest.py  test_analytics.py  test_audit_hooks.py  test_audit_runner.py  test_branches.py  test_bridge.py  test_ci.py  test_cli.py  test_contract_loader.py  test_contracts.py  test_diff.py  test_edge_cases.py  test_enforce.py  test_events.py  test_full_workflow.py  test_ignore_parser.py  test_insights.py  test_integration.py  test_negotiate.py  test_replay.py  test_reverse.py  test_serialize.py  test_simulate.py  test_storage.py  test_tool_input.py  test_validate.py
tools/: README.md  __init__.py  analytics.py  bridge.py  (+20 more)
(+9 files in other folders)
